--- a/index.html
+++ b/index.html
@@ -1,33 +1,35 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My resume</title>
 </head>
 <body>
-    <h1>Mirza's portfolio</h1>
-    <h2>i am a webdeveloper</h2>
+    <h1>
+    My resume
+    </h1>
+    <img src="./image.jpg " alt="profile photo" height="200" >
     <hr/>
-    <h3><a href="./public/movie-ranking.html">Movie ranking project</a></h3>>
-    <img src="./assets/images/movie-ranking.png" height="200" alt="movie ranking project preview">
-    <hr/>
-    <h3><a href="./public/birthday-invite.html">Movie ranking project</a></h3>
-    <img src="./assets/images/birthday-invite.png" height="200" alt="birthday invite project preview">
-    <a href="./public/about.html">about me</a> <a href="./public/contact.html">contact me</a>
+    <h3>summary</h3>
+    <p>I am a cs student from dayananda sagar college of engineering who is very keen
+        on working hard provinding all my skills and knowledge towards the development of the company
+    </p>
+<h3>Education</h3>
+<ul><li>class 10th:90%</li>
+    <li>class 12th 91%</li>
+    <li>bachelors:92%</li></ul>
+<h3>work experience:</h3>
+IBM 1 month internship
+<h3>skills</h3>
+<ol start="1">
+    <li>c++           ⭐️⭐️⭐️</li> 
+    <li>c             ⭐️⭐️</li>
+    <li>javascript    ⭐️⭐️⭐️⭐️⭐️</li> 
+    <li>webdevelopment⭐️⭐️⭐️⭐️⭐️</li></ol>
+<hr/>
+<a href="./hobbies.html">Hobbies</a> 
+<hr/>
+<a href="./contactme.html">contact me</a>
 </body>
 </html>
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
